# Course-work

./: .gitignore  CMakeLists.txt  generate_bad_data.cpp  generate_data.cpp  heuristic_solution.cpp  ilp_solution.cpp  input.json  local_search_solution.cpp  simulated_annealing_solution.cpp  solution.cpp  testing.cpp
analysis/: all_methods.cpp  choosing_constants.cpp  temperature_functions_comparison.cpp  tf_local_search.cpp  tf_sim_annealing.cpp
bad_tests/data/: cp_data.json  graph.txt  test0_0.json  test0_14.json  test0_4.json  test0_5.json  test0_6.json  test0_7.json  test0_8.json  test0_9.json  test1_10.json  test1_12.json  test1_13.json  test1_2.json  test1_4.json  test1_5.json  test1_6.json  test1_7.json  test1_9.json  test2_0.json  test2_1.json  test2_11.json  test2_12.json  test2_13.json  test2_14.json  test2_3.json  test2_4.json  test2_5.json  test2_6.json  test2_7.json  test2_8.json  test3_0.json  test3_11.json  test3_13.json  test3_14.json  test3_3.json  test3_8.json  test3_9.json  test4_0.json  test4_11.json  (+10 more)
bad_tests/input_data/: input.json  input1.json  input2.json  input3.json
code/: CMakeLists.txt
code/data/: graph.txt  testing_data.json  vertices_degrees.txt
code/data_generation/: data_generation.cpp  graph_generation.cpp  vertices_degrees_generation.cpp
code/input_data/: input.json
constants/: heuristic_constants.cpp  heuristic_constants.h
constraint_programming/: 1_optimized.mzn  1_optimized2.mzn  convert_data.cpp  convert_multiple_files.cpp  first_model.mzn  second_model.mzn  second_model_custom.mzn  testing.cpp
constraint_programming/cp_bad_test_data/0/: test0_0.dzn  test0_1.dzn  test0_10.dzn  test0_11.dzn  test0_12.dzn  test0_13.dzn  test0_14.dzn  test0_2.dzn  test0_3.dzn  test0_4.dzn  test0_5.dzn  test0_6.dzn  test0_7.dzn  test0_8.dzn  test0_9.dzn
constraint_programming/cp_bad_test_data/1/: test1_0.dzn  test1_1.dzn  test1_10.dzn  test1_11.dzn  test1_12.dzn  test1_13.dzn  test1_14.dzn  test1_2.dzn  test1_3.dzn  test1_4.dzn  test1_5.dzn  test1_6.dzn  test1_7.dzn  test1_8.dzn  test1_9.dzn
constraint_programming/cp_bad_test_data/2/: test2_0.dzn  test2_1.dzn  test2_10.dzn  test2_11.dzn  test2_12.dzn  test2_13.dzn  test2_14.dzn  test2_2.dzn  test2_3.dzn  test2_4.dzn  test2_5.dzn  test2_6.dzn  test2_7.dzn  test2_8.dzn  test2_9.dzn
constraint_programming/cp_bad_test_data/3/: test3_0.dzn  test3_1.dzn  test3_10.dzn  test3_11.dzn  test3_12.dzn  test3_13.dzn  test3_14.dzn  test3_2.dzn  test3_3.dzn  test3_4.dzn  test3_5.dzn  test3_6.dzn  test3_7.dzn  test3_8.dzn  test3_9.dzn
constraint_programming/cp_bad_test_data/4/: test4_0.dzn  test4_1.dzn  test4_10.dzn  test4_11.dzn  test4_12.dzn  test4_13.dzn  test4_14.dzn  test4_2.dzn  test4_3.dzn  test4_4.dzn  test4_5.dzn  test4_6.dzn  test4_7.dzn  test4_8.dzn  test4_9.dzn
constraint_programming/cp_test_data/0/: test0_0.dzn  (+14 more)
constraint_programming/tests_results/: 0.txt  0_1.txt  1.txt  1_1.txt
data/: graph.txt  test0_1.json  test0_10.json  test0_11.json  test0_12.json  test0_13.json  test0_2.json  test0_3.json  test1_0.json  test1_1.json  test1_11.json  test1_14.json  test1_3.json  test1_8.json  test2_10.json  test2_2.json  test2_9.json  test3_1.json  test3_10.json  test3_12.json  test3_2.json  test3_4.json  test3_5.json  test3_6.json  test3_7.json  test4_1.json  test4_10.json  test4_14.json  test4_2.json  test4_3.json  test4_4.json  test4_5.json  test4_7.json  test4_8.json  test5_0.json  test5_1.json  test5_10.json  test5_11.json  test5_12.json  test5_13.json  (+7 more)
data_generation/: bad_data_generation.cpp  data_generation.cpp  graph_generation.cpp  vertices_degrees_generation.cpp
help_structs/: data_processor.cpp  data_processor.h  data_reader.cpp  data_reader.h  entities.cpp  entities.h  indices_converter.cpp  indices_converter.h  row_wise_matrix.cpp  row_wise_matrix.h  temperature_functions.cpp  temperature_functions.h
heuristic_model/: heuristic_model.cpp  heuristic_model.h  local_search_solver.cpp  local_search_solver.h  simulated_annealing_solver.cpp  simulated_annealing_solver.h
input_data/: input.json  input0.json  input4.json  input5.json
python/: file.txt  input.json  main.py  timetable.json
test_data/0/: input.json  test0_0.json  test0_1.json  test0_10.json  test0_11.json  test0_12.json  test0_13.json  test0_14.json  test0_2.json  test0_3.json  test0_4.json  test0_5.json  test0_6.json  test0_7.json  test0_8.json  test0_9.json
test_data/1/: input.json  test1_0.json  test1_1.json  test1_10.json  test1_11.json  test1_12.json  test1_13.json  test1_14.json  test1_2.json  test1_3.json  test1_4.json  test1_5.json  test1_6.json  test1_7.json  test1_8.json  test1_9.json
test_data/2/: input.json  test2_0.json  test2_1.json  test2_10.json  test2_11.json  test2_12.json  test2_13.json  test2_14.json  test2_2.json  test2_3.json  test2_4.json  test2_5.json  test2_6.json  test2_7.json  test2_8.json  test2_9.json
test_data/3/: input.json  test3_0.json  test3_1.json  test3_10.json  test3_11.json  test3_12.json  test3_13.json  test3_14.json  test3_2.json  test3_3.json  test3_4.json  test3_5.json  test3_6.json  test3_7.json  test3_8.json  test3_9.json
test_data/4/: input.json  test4_0.json  test4_1.json  test4_10.json  test4_11.json  test4_12.json  test4_13.json  test4_14.json  test4_2.json  test4_3.json  test4_4.json  test4_5.json  test4_6.json  test4_7.json  test4_8.json  test4_9.json
test_data/5/: input.json  test5_0.json  test5_1.json  test5_10.json  test5_11.json  test5_12.json  test5_13.json  test5_14.json  test5_2.json  test5_3.json  test5_4.json  test5_5.json  test5_6.json  test5_7.json  test5_8.json  test5_9.json
test_data/6/: input.json  test6_0.json  test6_1.json  test6_10.json  test6_11.json  test6_12.json  test6_13.json  test6_14.json  test6_2.json  test6_3.json  test6_4.json  test6_5.json  test6_6.json  test6_7.json  test6_8.json  test6_9.json
test_data/7/: input.json  test7_0.json  test7_1.json  test7_10.json  test7_11.json  test7_12.json  test7_13.json  test7_14.json  test7_2.json  test7_3.json  test7_4.json  test7_5.json  test7_6.json  test7_7.json  test7_8.json  test7_9.json
(+279 files in other folders)
